--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -153,7 +153,9 @@ dependencies {
     implementation("com.facebook.react:react-android")
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
-
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation("com.squareup.okhttp3:okhttp-urlconnection:4.9.1")
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
